# livesdk

./: .gitignore  CMakeLists.txt  dllmain.cpp  main.cpp  readme.md
net/tcp/: tcpclient.cpp  tcpclient.h  tcpserver.cpp  tcpserver.h
net/udp/: udpserver.cpp  udpserver.h
network/: exportdef.h  networkdef.h
network/tcp/: tcpclient.cpp  tcpclient.h  tcpconnection.cpp  tcpconnection.h  tcpconnectionmgr.cpp  tcpconnectionmgr.h  tcpserver.cpp  tcpserver.h
network/udp/: udpclient.cpp  udpclient.h  udpserver.h
stream/: Application.cpp  Application.h  Resource.h  common.cpp  common.h  webrtc_test.aps  webrtc_test.rc
test/: CMakeLists.txt
test/tcpclient/: CMakeLists.txt  main.cpp
test/tcpserver/: CMakeLists.txt  evser.cpp  evser.h  main.cpp
webrtc_test/: Application.cpp  Application.h  CMakeLists.txt  common.cpp  common.h  targetver.h  webrtc_test.cpp
webrtc_test/call/: audioloop.cpp  audioloop.h  calltest.cpp  calltest.h
